# RAPL

./: .gitignore  Dockerfile  analysis.py  docker-compose.yaml  pyproject.toml
data/test/: test_1.csv  test_10.csv  test_2.csv  test_3.csv  test_4.csv  test_5.csv  test_6.csv  test_7.csv  test_8.csv  test_9.csv
data/train/: pdl_train_1.csv  pdl_train_10.csv  pdl_train_2.csv  pdl_train_3.csv  pdl_train_4.csv  pdl_train_5.csv  pdl_train_6.csv  pdl_train_7.csv  pdl_train_8.csv  pdl_train_9.csv
